--- a/lab1_tp_5/lab1_tp_5.vcxproj.filters
+++ b/lab1_tp_5/lab1_tp_5.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="keeper.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
